compiler/fir/analysis-tests/testData/resolve/extendedCheckers/SafeInitializationChecker/delegation.kt
class Hello {
    val message: String by lazy { name }
    <!UNREACHABLE_CODE!>val len = message.length<!>
    <!ACCESS_TO_UNINITIALIZED_VALUE!>val name = "Alice"<!>
}